EVALSYS-1309 Decreased font-size for grouped matrix scale labels to help prevent overlapping
git-svn-id: https://source.sakaiproject.org/contrib/evaluation/branches/unicon-ucb@80657 fdecad78-55fc-0310-b1b2-d7d25cf747c9

--- a/tool/src/webapp/content/css/evaluation_base.css
+++ b/tool/src/webapp/content/css/evaluation_base.css
@@ -454,21 +454,12 @@ ol.summaryEvaluateList {
   padding: .3em .5em;
 }
 
-.itemScalePanel .compactDisplayStart {
-}
-
-.itemScalePanel .compactDisplayEnd {
-}
-
 .itemScalePanel .compactDisplayPositive {
-  background: #8BE8A2;
-}
-
-.itemScalePanel .compactDisplayNegative {
   background: #FF8BA0;
 }
 
-.itemScalePanel .compactDisplayNeutral {
+.itemScalePanel .compactDisplayNegative {
+  background: #8BE8A2;
 }
 
 .itemScalePanel td.idealScale {
@@ -1922,7 +1913,7 @@ table#user-perms-table td.userPerms > span:nth-child(2n) {
 }
 .portletBody .matrix legend {
   font-weight: normal;
-  font-size: 1em;
+  font-size: 0.85em;
   color: #000;
 }
 .portletBody .item-group .item .title .label {
