--- a/tool/src/webapp/content/css/scss/_typography.scss
+++ b/tool/src/webapp/content/css/scss/_typography.scss
@@ -31,7 +31,7 @@
   .matrix {
     legend {
       font-weight: normal;
-      font-size: 1em;
+      font-size: 0.85em;
       color: #000;
     }
   }
